fix getAll tags api bug , fix home screen thumbnails padding bug - remove padding add gap

--- a/client/src/Pages/Home/HomePage.module.css
+++ b/client/src/Pages/Home/HomePage.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    gap : 2rem
 }
 
 ::-webkit-scrollbar {
