--- a/client/src/components/Thumbnails/Thumbnail.module.css
+++ b/client/src/components/Thumbnails/Thumbnail.module.css
@@ -1,7 +1,6 @@
 .main {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-    padding-left: 2rem;
 }
 
 @media only screen and (max-width: 500px) {
